--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,6 @@ pandas
 psycopg2-binary
 python-dotenv
 pyarrow
-apache-airflow
-apache-airflow-providers-apache-spark
+apache-airflow==3.0.6
+apache-airflow-providers-apache-spark==3.0.0
 fastapi[standard]
