fix all the suff after  merge and airflow docker compose

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -134,6 +134,8 @@ services:
 
   airflow-scheduler:
     <<: *airflow-common
+    env_file:
+      - .env
     command: scheduler
     healthcheck:
       test: ["CMD", "curl", "--fail", "http://localhost:8974/health"]
