Dev/hung20gg (#3)
* add new files from test notebook

* airflow show-able

* convert to PythonOperator and it works

* added gold

* airflow runable

* fix all the suff after  merge and airflow docker compose

* final version. Move all transformation to silver

---------

Co-authored-by: vuadaotac <vuadaotac@gmail.com>
Co-authored-by: Huy Vu <huyvu5412@gmail.com>

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,10 @@
 boto3
+pydantic==2.11.7
 pyspark
 pandas
 psycopg2-binary
 python-dotenv
 pyarrow
-apache-airflow
+apache-airflow==3.0.6
+apache-airflow-providers-apache-spark==3.0.0
+fastapi[standard]
